added recommended JVM for building with Maven and Sbt